# recursive_expert_delegation

./: .example.env  .gitignore  README.md  config.py  pyproject.toml
benchmarks/: README.md  benchmark.py
benchmarks/benchmark_20250827_152808/: benchmark_comparison_20250827_152808.csv  detailed_results_20250827_152808.json
benchmarks/benchmark_informative_only/: benchmark_comparison_20250828_123511.csv  detailed_results_20250828_123511.json
benchmarks/benchmark_informative_then_all_predicted/: benchmark_comparison_20250828_120526.csv  detailed_results_20250828_120526.json
benchmarks/benchmark_informative_then_all_predictions_gemma3-4b/: benchmark_comparison_20250829_131257.csv  detailed_results_20250829_131257.json
benchmarks/benchmark_informative_then_all_predictions_gemma3-4b_max_iter/: benchmark_comparison_20250829_080022.csv  detailed_results_20250829_080022.json
benchmarks/benchmark_informative_then_all_predictions_glm-4.5-air/: benchmark_comparison_20250829_123341.csv  detailed_results_20250829_123341.json
benchmarks/benchmark_informative_then_all_predictions_glm-4.5-air_max_iter/: benchmark_comparison_20250829_103900.csv  detailed_results_20250829_103900.json
benchmarks/benchmark_informative_then_all_predictions_qwen3-8B/: benchmark_comparison_20250829_135945.csv  detailed_results_20250829_135945.json
benchmarks/benchmark_informative_then_all_predictions_qwen3-8B_max_iter/: benchmark_comparison_20250828_221749.csv  detailed_results_20250828_221749.json
benchmarks/benchmark_informative_then_all_predictions_setfit-glm-4.5-air/: benchmark_comparison_20250901_075548.csv  detailed_results_20250901_075548.json
examples/: basic_example.py
examples/data/: train.csv  unlabeled.csv
src/red/: __init__.py
src/scripts/: run_active_learning.py  run_initial_training.py
utils/: custom_llm.py  llm_pipeline.py  model_configs.py
(+68 files in other folders)
