[project]
name = "recursive-expert-delegation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.0"
dependencies = [
    "aiohttp>=3.11.16",
    "asyncio>=3.4.3",
    "nest-asyncio>=1.6.0",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "tenacity>=9.1.2",
    "torch>=2.6.0",
    "transformers>=4.51.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
