[project]
name = "recursive-expert-delegation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.0"
dependencies = [
    "aiohttp>=3.11.16",
    "asyncio>=3.4.3",
    "google-genai>=1.11.0",
    "nest-asyncio>=1.6.0",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "scikit-learn>=1.6.1",
    "tenacity>=9.1.2",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "transformers>=4.51.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
