[project]
name = "recursive-expert-delegation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.0"
dependencies = [
    "aiohttp>=3.11.16",
    "asyncio>=3.4.3",
    "dotenv>=0.9.9",
    "google-genai>=1.11.0",
    "nest-asyncio>=1.6.0",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=5.1.0",
    "tenacity>=9.1.2",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "transformers>=4.51.3",
    "umap-learn>=0.5.6",
    "pyyaml>=6.0.2",
    "joblib>=1.4.2",
    "faiss-cpu>=1.9.0",
    "imbalanced-learn>=0.12.4",
    "setfit>=1.1.1",
    "openpyxl>=3.1.5",
    "xlrd>=2.0.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
